# crunch-my-stock-symfony

./: .env  .env.dev  .env.test  .gitignore  .php-cs-fixer.cache  c.ps1  composer.json  play.php  psalm.xml  pyproject.toml  requirements.txt
config/: services.yaml
config/secrets/dev/: dev.ALPHAVANTAGE_API_KEY.e158f7.php  dev.FMP_API_KEY.2162ce.php  dev.encrypt.public.php  dev.list.php
config/secrets/prod/: prod.ALPHAVANTAGE_API_KEY.e158f7.php  prod.FMP_API_KEY.2162ce.php  prod.encrypt.public.php  prod.list.php
data/: listingDelistingStatus.csv  readme.md
documentation/: extra_folders.md  updating_securities.md
documentation/diagrams/architecture/: .$app.drawio.bkp  app.c4  app.drawio  application_layer.c4  core.c4  relationships.c4  specs.c4  test.d2  test.plantuml  views.c4
migrations/: Version20241012145241.php
notebooks/: fmp.ipynb
notebooks/endpoints_exploration/alphavantage/: listing_status.ipynb
notebooks/endpoints_exploration/fmp/: readme.md  symbol_list.ipynb  tradeable_search.ipynb
src/Command/: ImportSecuritiesCommand.php  PlayCommand.php  RunCommand.php
src/Core/Domain/: Exchange.php  Security.php  SecurityType.php  Symbol.php  TradingStatus.php
src/DataProvider/: ApiDataProvider.php  ApiProviderService.php  DataFilesService.php  DataProvider.php  DataProviderFactory.php  FilesystemDataProvider.php  SecuritiesDataProvider.php
src/DataSource/: FmpDataSource.php
src/Entity/: Security.php
src/Repository/: SecurityRepository.php
src/Serializer/: AppSerializer.php
src/Service/: DataProviderService.php  FmpService.php
(+54 files in other folders)
